# hd-compute-toolkit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v2.md  BACKLOG.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.quantum  ENHANCED_IMPLEMENTATION_SUMMARY.md  ENHANCED_RESEARCH_PUBLICATION.md  FINAL_AUTONOMOUS_SDLC_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS_REPORT.md  IMPROVEMENTS_TODO.md  Makefile  PERFORMANCE_BENCHMARK_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  README_ENHANCED.md  RESEARCH_DOCUMENTATION.md  RESEARCH_SUMMARY.md  SECURITY.md  SECURITY_ANALYSIS_COMPLETE.md  SECURITY_IMPLEMENTATION_EXAMPLES.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_SCAN_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_V4_COMPLETION_REPORT.md  advanced_performance_system.py  (+61 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.terragon/: config.yaml  value-metrics.json
config/: production.yaml  staging.yaml
deploy/: cleanup.sh  deploy.sh  entrypoint.sh  global-deployment-guide.md  health-check.sh  production-checklist.md  production-deployment.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 000-adr-template.md  001-framework-agnostic-design.md  001-framework-selection.md  template.md
docs/deployment/: README.md
docs/guides/: developer-guide.md  getting-started.md
docs/monitoring/: README.md
docs/runbooks/: README.md  incident-response.md  maintenance.md
docs/testing/: README.md
docs/workflows/: README.md  SETUP_REQUIRED.md
docs/workflows/examples/: ci-complete.yml  dependency-update.yml  gpu-tests.yml
docs/workflows/templates/: benchmark.yml  ci.yml  release.yml  security.yml
examples/: classify_demo.py
hd_compute/: __init__.py
hd_compute/acceleration/: __init__.py  hardware_acceleration.py
hd_compute/api/: __init__.py  routes.py  server.py
hd_compute/applications/: __init__.py  cognitive.py  speech_commands.py  task_planning.py
hd_compute/cache/: __init__.py  cache_manager.py  hypervector_cache.py
hd_compute/cli/: __init__.py  benchmark.py  evaluate.py  main.py  train.py
hd_compute/compliance/: __init__.py  audit_compliance.py  data_privacy.py  gdpr.py
hd_compute/core/: __init__.py  hdc.py  hdc_base.py
hd_compute/database/: __init__.py  connection.py  models.py  repository.py
hd_compute/database/migrations/: __init__.py  migration_manager.py
hd_compute/distributed/: __init__.py  distributed_hdc.py  parallel_processing.py  quantum_distributed_computing.py  quantum_task_distribution.py
hd_compute/i18n/: __init__.py  locale_manager.py  translator.py
hd_compute/i18n/translations/: en.json
hd_compute/jax/: __init__.py  hdc_jax.py
hd_compute/memory/: __init__.py  associative_memory.py  item_memory.py  simple_memory.py
hd_compute/monitoring/: comprehensive_monitoring.py
hd_compute/numpy/: __init__.py  hdc_numpy.py
hd_compute/performance/: __init__.py  advanced_optimization.py  benchmark.py  enhanced_quantum_optimization.py  optimization.py  profiler.py  quantum_optimization.py
hd_compute/pure_python/: __init__.py  hdc_python.py
hd_compute/research/: __init__.py  adaptive_memory.py  enhanced_research_algorithms.py  experimental_framework.py  fractional_operations.py  novel_algorithms.py  optimized_algorithms.py  quantum_hdc.py  statistical_analysis.py
hd_compute/robust_backends/: __init__.py  robust_python.py
hd_compute/scalable_backends/: __init__.py  scalable_python.py
hd_compute/security/: __init__.py  audit_logger.py  enhanced_security.py  input_sanitization.py  research_security.py  secure_imports.py  secure_serialization.py  security_config.py  security_scanner.py  task_planning_security.py
hd_compute/torch/: __init__.py  hdc_torch.py
hd_compute/utils/: __init__.py  config.py  device_utils.py  environment.py  logging_config.py  validation.py
hd_compute/validation/: __init__.py  error_recovery.py  error_recovery_system.py  quality_assurance.py  research_validation.py  task_planning_validation.py
hdc/: __init__.py  encoder.py  memory.py  ops.py  trainer.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.yaml  service.yaml
monitoring/: prometheus.yml
production_deployment/: Dockerfile  README.md  docker-compose.yml  k8s-configmap.yaml  k8s-deployment.yaml  validation_report.json
production_deployment/global/: global_config.json  terraform_global.tf
production_deployment/monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
scripts/: build-all.sh  collect_metrics.py  generate_reports.py  update_dependencies.py  update_version.py
src/monitoring/: health.js
tests/: __init__.py  conftest.py  test_classifier.py  test_core.py  test_encoder.py  test_examples.py  test_memory.py  test_ops.py  test_performance.py  test_pure_python_backend.py  test_quantum_task_planning.py  test_research_comprehensive.py  test_suite.js
tests/e2e/: __init__.py  test_full_pipeline.py  test_speech_commands.py
tests/fixtures/: README.md  data_generators.py  sample_data.py
tests/hardware/: __init__.py  test_gpu_acceleration.py
tests/integration/: test_api.py  test_backend_compatibility.py
tests/performance/: conftest.py  test_benchmarks.py
tests/security/: test_security_fixes.py
tests/test_data/: README.md
tests/unit/: __init__.py  test_applications.py  test_cache.py  test_core_operations.py  test_database.py  test_hdc_operations.py  test_jax_backend.py  test_memory_structures.py  test_torch_backend.py
